--- a/index.html
+++ b/index.html
@@ -66,16 +66,14 @@
     </div>
   </div>
 </header>
-      <!--
-         <div class="up-wrap">
+      <div class="up-wrap">
          <button class="up" id="up" onclick='window.scrollTo({top: 0, behavior: "smooth"});'>
-            <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 50 50" version="1.1">
-               <path fill="#243f4d" fill-rule="evenodd" d="M 28.050781 45.191406 L 21.816406 45.191406 C 20.101562 45.191406 18.699219 43.789062 18.699219  42.078125 L 18.699219 23.375 L 13.089844 23.375 C 11.84375 23.375 10.75 22.59375 10.285156 21.507812 C 9.820312 20.414062 9.972656 19.011719  10.90625 18.078125 L 23.84375 5.140625 C 24.46875 4.519531 25.398438 4.519531 26.023438 5.140625 L 38.960938 18.078125 C 39.894531 19.011719  40.046875 20.257812 39.582031 21.507812 C 39.117188 22.75 38.023438 23.375 36.777344 23.375 L 31.164062 23.375 L   31.164062 42.078125 C 31. 164062 43.789062 29.765625 45.191406 28.050781 45.191406 Z M 28.050781 45.191406 "/>
-            </svg>
+            <div class="arrow-right">
+   <span class="arrow-right__angle"></span>
+</div>
          </button>
-         </div>
-         -->
-
+      </div>
+      
    <main class="main">
 
     <div class="invite">
@@ -569,7 +567,18 @@
   </div>
 </footer>
 
+   <script>
+      var mybutton = document.getElementById("up");
+      window.onscroll = function() {scrollFunction()};
    
+      function scrollFunction() {
+        if (document.body.scrollTop > 150 || document.documentElement.scrollTop > 150) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+   </script>
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script src="js/main.min.js"></script>
 </body>
