add page-404, ceremony, fix product__btn

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
       </div>
     </div>
   </div>
+  <div class="header__line"></div>
 </header>
-      <div class="up-wrap">
+         <div class="up-wrap">
          <button class="up" id="up" onclick='window.scrollTo({top: 0, behavior: "smooth"});'>
             <div class="arrow-right">
    <span class="arrow-right__angle"></span>
@@ -87,7 +88,7 @@
                   <p class="invite__text--adapt">PLAN YOUR VISIT TO A
                      <span>Tea ceremony master class</span>
                   </p>
-                  <a class="invite__link" href="#">
+                  <a class="invite__link" href="ceremony.html">
                      <div class="arrow-right">
    <span class="arrow-right__angle"></span>
 </div>
@@ -318,7 +319,7 @@
               </div>
             </div>
           </div>
-          <a class="set-slider__box-link" href="#">
+          <a class="set-slider__box-link" href="page-404.html">
             <span>Assemble the tea set</span>
             <div class="arrow-right">
    <span class="arrow-right__angle"></span>
@@ -339,7 +340,7 @@
       <div class="blog__inner">
         <ul class="blog__list">
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">Milk oolong - how the famous tea is made</h3>
               <p class="blog__item-text">
                 Milk oolong is a Chinese tea, a favorite of Europeans. It was the oolongs that became the first ceremonial teas.
@@ -350,7 +351,7 @@
             </a>
           </li>
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">Tea ceremony in China</h3>
               <p class="blog__item-text">
                 The tea ceremony originated in China and only a few centuries later its attributes successfully migrated first to Japanese.
@@ -361,7 +362,7 @@
             </a>
           </li>
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">Puerh properties - 16 points of benefit</h3>
               <p class="blog__item-text">
                 The Chinese are very attentive to physical and emotional health. This is one of the reasons why they drink pu-erh with such pleasure.
@@ -372,7 +373,7 @@
             </a>
           </li>
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">How to store tea at home</h3>
               <p class="blog__item-text">
                 To keep your tea always tasty, and you can please yourself or surprise guests at any time, store it correctly.
@@ -449,7 +450,7 @@
                      </a>
                   </div>
                </div>
-               <a class="more-link" href="#">View more</a>
+               <a class="more-link" href="page-404.html">View more</a>
             </div>
          </div>
       </section>
@@ -567,18 +568,6 @@
   </div>
 </footer>
 
-   <script>
-      var mybutton = document.getElementById("up");
-      window.onscroll = function() {scrollFunction()};
-   
-      function scrollFunction() {
-        if (document.body.scrollTop > 150 || document.documentElement.scrollTop > 150) {
-          mybutton.style.display = "block";
-        } else {
-          mybutton.style.display = "none";
-        }
-      }
-   </script>
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script src="js/main.min.js"></script>
 </body>
