adaptive for page-404

--- a/ceremony.html
+++ b/ceremony.html
@@ -20,26 +20,26 @@
         </button>
         <ul class="menu__list">
           <li class="menu__item">
-            <a class="menu__item-link" href="#catalog">Catalog</a>
+            <a class="menu__item-link" href="index.html#catalog">Catalog</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#set">Set</a>
+            <a class="menu__item-link" href="index.html#set">Set</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#blog">Blog</a>
+            <a class="menu__item-link" href="index.html#blog">Blog</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#reviews">Reviews</a>
+            <a class="menu__item-link" href="index.html#reviews">Reviews</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#shop">Shop</a>
+            <a class="menu__item-link" href="index.html#shop">Shop</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#contacts">Contacts</a>
+            <a class="menu__item-link menu__item-link--contacts" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
-      <a class="logo" href="#home">
+      <a class="logo" href="index.html#home">
         <img clsss="logo__img" src="images/logo.svg" alt="logo">
       </a>
       <div class="header__contacts">
@@ -131,7 +131,7 @@
       <h2 class="footer__title title">Contacts</h2>
       <div class="footer__inner">
         <div class="footer__item">
-          <a class="logo" href="#home">
+          <a class="logo" href="index.html#home">
             <img clsss="logo__img" src="images/logo.svg" alt="logo">
           </a>
           <div class="footer__open">
@@ -156,19 +156,19 @@
           <h5 class="footer__item-title">Information</h5>
           <ul class="footer__list">
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#catalog">Catalog</a>
+              <a class="footer__list-link menu__item-link" href="index.html#catalog">Catalog</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#set">Set</a>
+              <a class="footer__list-link menu__item-link" href="index.html#set">Set</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#blog">Blog</a>
+              <a class="footer__list-link menu__item-link" href="index.html#blog">Blog</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#reviews">Reviews</a>
+              <a class="footer__list-link menu__item-link" href="index.html#reviews">Reviews</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#shop">Shop</a>
+              <a class="footer__list-link menu__item-link" href="index.html#shop">Shop</a>
             </li>
             <li class="footer__list-item">
               <a class="footer__list-link menu__item-link" href="#contacts">Contacts</a>
