--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
         </button>
         <ul class="menu__list">
           <li class="menu__item">
-            <a class="menu__item-link" href="#catalog">Catalog</a>
+            <a class="menu__item-link menu__item-link--main" href="#catalog">Catalog</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#set">Set</a>
+            <a class="menu__item-link menu__item-link--main" href="#set">Set</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#blog">Blog</a>
+            <a class="menu__item-link menu__item-link--main" href="#blog">Blog</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#reviews">Reviews</a>
+            <a class="menu__item-link menu__item-link--main" href="#reviews">Reviews</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#shop">Shop</a>
+            <a class="menu__item-link menu__item-link--main" href="#shop">Shop</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="#contacts">Contacts</a>
+            <a class="menu__item-link menu__item-link--main" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
-      <a class="logo" href="#home">
+      <a class="logo logo--main" href="#home">
         <img clsss="logo__img" src="images/logo.svg" alt="logo">
       </a>
       <div class="header__contacts">
@@ -494,19 +494,19 @@
           <h5 class="footer__item-title">Information</h5>
           <ul class="footer__list">
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#catalog">Catalog</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#catalog">Catalog</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#set">Set</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#set">Set</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#blog">Blog</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#blog">Blog</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#reviews">Reviews</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#reviews">Reviews</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="#shop">Shop</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#shop">Shop</a>
             </li>
             <li class="footer__list-item">
               <a class="footer__list-link menu__item-link" href="#contacts">Contacts</a>
